# Text-MedSAM

./: .gitignore  README.md  SHUFFLEFORMER_BRANCH.md  main.py  pyproject.toml  sample_embedding.py  test.py
.github/workflows/: main.yml
configs/: text_seg_new.yaml  text_seg_repvit.yaml
evaluation/: compute_metrics.py  text_eval.py
scripts/: CVPR24_LiteMedSAM_infer.py  attn_vis.py  baseline_infer.py  batch_infer_text.py  compute_clip_score.py  embeddings.sh  infer_batch.py  preprocess.py  slice_screen.py  split.py  statistics.py  text_embed.py  text_predict.sh
src/dataset/: eval.py  text_seg_n.py  textseg.py  utils.py
src/losses/: clip_loss.py  losses.py  medsam_loss.py  total_loss.py
src/models/: maskformer.py  modules.py  sam.py  shuffle_former.py  transformer.py
src/models/heads/: __init__.py  mask_decoder.py  prompt_encoder.py  text_embedder.py
src/models/visual/: image_encoder.py  repvit_cfgs.py  tiny_vit.py
src/sam/: automatic_mask_generator.py  build_sam.py  predictor.py  sam2_base.py  utils.py
train/: __init__.py  textsamFPN.py
training/: train_k_fold.py  train_textsam.py
utils/: helper.py
