[project]
name = "rep-medsam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "monai>=1.5.1",
    "nibabel>=5.3.3",
    "omegaconf>=2.3.0",
    "open-clip-torch>=3.2.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "simpleitk>=2.5.3",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
